<resources>
    <string name="app_name">HealthyBite</string>
    <string name="emoji_title_name">🥦</string>
    <string name="title_app">HealthyBite</string>
    <string name="welcome_greeting">¡Hola!</string>
    <string name="user">Usuario 👋</string>
    <string name="total_day_text">🔥 Total del día: </string>
    <string name="kcal_text">0 kcal</string>
    <string name="new_food">NUEVO ALIMENTO</string>
    <string name="emoji_new_food">🥗</string>
    <string name="emoji_kcal">⚡</string>
    <string name="category">CATEGORÍA</string>
    <string name="options">OPCIONES</string>
    <string name="kcal_percentage">+10% kcal</string>
    <string name="emoji_category">🍽</string>
    <string name="btn_calculate">Calcular calorías</string>
    <string name="hint_food_name">Nombre de la comida</string>
    <string name="hint_base_calories">Calorías base</string>
    <string name="check_processed">Comida procesada</string>
    <string name="summary_text">Resumen</string>
    <string name="food_storage_verification">Tu Alimento Guardado</string>
    <string name="food">Comida</string>
    <string name="processed_question">¿Procesado?</string>
    <string name="total_calories">TOTAL CALORÍAS</string>
    <string name="kcal">kcal</string>
    <string name="_10">(+10%)</string>
    <string name="yes_10">Sí (+10%)</string>
    <string name="no_10">No</string>
    <string name="load_other_food">Cargar otro alimento</string>
    <string name="_0">0</string>
    <string name="login_text">INICIAR SESIÓN</string>
    <string name="loading">Cargando...</string>
    <string name="lats_food_registed">Último alimento registrado:</string>
    <string name="my_diary">Mi Diario</string>
    <string name="record">Historial</string>
    <string name="return_home">Volver al inicio</string>
    <string name="food_session">Alimentos de la sesión</string>
    <string name="food_item_category_emoji">🥗</string>
    <string name="format_calories_kcal">%1$d kcal</string>

    <string-array name="categories_array">
        <item>Seleccione una categoría...</item>
        <item>Desayuno</item>
        <item>Almuerzo</item>
        <item>Cena</item>
        <item>Snack</item>
    </string-array>
</resources>